trunk/Archive2/37/31f5210a79f5da/output
main.cpp: In function ‘void int_array(int*)’:
main.cpp:20:1: error: expected ‘(’ before ‘int’
 int main()
 ^
main.cpp:21:1: error: a function-definition is not allowed here before ‘{’ token
 {
 ^
main.cpp:21:1: error: expected ‘;’ before ‘{’ token
main.cpp:21:1: error: expected primary-expression before ‘{’ token
main.cpp:21:1: error: expected ‘;’ before ‘{’ token
main.cpp:21:1: error: expected primary-expression before ‘{’ token
main.cpp:21:1: error: expected ‘)’ before ‘{’ token
main.cpp:26:1: error: expected ‘}’ at end of input
 }
 ^
