trunk/Archive2/37/31f5210a79f5da/main.cpp
#include <iostream>
#include <string>
#include <vector>

const int size = 500;

template<typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec)
{
    for (auto& el : vec)
    {
        os << el << ' ';
    }
    return os;
}

void int_array (int arr[]) {
    for

int main()
{
    std::vector<std::string> words = {
        "Hello", "from", "GCC", __VERSION__, "!"
    };
    std::cout << words << std::endl;
}
